<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_new_title"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_type"
            android:textSize="20sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tickets_new_type_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_new_type_delivery"/>

            <RadioButton
                android:id="@+id/tickets_new_type_takeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_new_type_takeaway"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_location"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/tickets_new_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ticket_new_location_hint"
            android:singleLine="true"
            android:imeOptions="actionNext" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_time"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/tickets_new_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ticket_new_time_hint"
            android:inputType="number"
            android:singleLine="true"
            android:imeOptions="actionNext" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_tip"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/tickets_new_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ticket_new_tip_hint"
            android:inputType="number"
            android:singleLine="true"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_pic"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_picUpload"
            android:textSize="20dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/tickets_new_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_create"/>

        <Button
            android:id="@+id/tickets_new_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_new_cancel"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

</LinearLayout>