...
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tickets_pic"
        android:text="截止 15min"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tickets_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tickets_pic"
        android:layout_marginTop="3dp"
        android:maxLength="13"
        android:text="@string/ticket_location_1"
        android:textSize="17sp" />

    <Button
        android:id="@+id/tickets_claim"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:text="@string/ticket_claim"
        android:textSize="20sp" />
...
